--- a/torrent-clinets/package.json
+++ b/torrent-clinets/package.json
@@ -30,7 +30,6 @@
   },
   "homepage": "https://github.com/enigmazack/npm-repo#readme",
   "devDependencies": {
-    "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.9",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
@@ -44,7 +43,6 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "form-data": "^3.0.0",
-    "lodash": "^4.17.20"
+    "form-data": "^3.0.0"
   }
 }
