--- a/torrent-clinets/package.json
+++ b/torrent-clinets/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "form-data": "^3.0.0"
+    "form-data": "^3.0.0",
+    "https-proxy-agent": "^5.0.0"
   }
 }
